fixing import issues between files

--- a/auth.yaml
+++ b/auth.yaml
@@ -1,6 +1,6 @@
-AUTH_ENDPOINT: HERE_GOES_AUTH_ENDPOINT
-API_ENDPOINT: HERE_GOES_API_ENDPOINT
-CLIEND_ID:  HERE_GOES_CLIENT_ID
-USERNAME: HERE_GOES_USERNAME
-PASSWORD: HERE_GOES_PASSWORD
-SECRET: HERE_GOES_SECRET
+AUTH_ENDPOINT: https://sense-o-east.es.net:8543/auth/realms/StackV/protocol/openid-connect/token
+API_ENDPOINT: https://sense-o-east.es.net:8443/StackV-web/restapi
+CLIEND_ID:  StackV
+USERNAME: egan
+PASSWORD: EFCFAA91-AA5C-42E8-8413-BBD9FCAE65EB
+SECRET: ae53fbea-8812-4c13-918f-0065a1550b7c
